--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,15 @@
 <app-header></app-header>
+<div class="container">
+  <app-cokpit
+    (serverCreated)="onServerAdded($event)"
+    (blueprintCreated)="onBlueprintAdded($event)"
+    ></app-cokpit>
+  <hr>
+  <div class="row">
+    <div class="col-xs-12">
+      <app-serve-element
+        *ngFor="let serverElement of serverElements"
+        [srvElement]="serverElement"></app-serve-element>
+    </div>
+  </div>
+</div>
