--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <app-cokpit
     (serverCreated)="onServerAdded($event)"
-    (blueprintCreated)="onBlueprintAdded($event)"
+    (bpCreated)="onBlueprintAdded($event)"
     ></app-cokpit>
   <hr>
   <div class="row">
