--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,26 @@
 <app-header></app-header>
-<div class="container">
-  <app-cokpit
-    (serverCreated)="onServerAdded($event)"
-    (bpCreated)="onBlueprintAdded($event)"
-    ></app-cokpit>
-  <hr>
+<!--<div class="container">-->
+  <!--<app-cokpit-->
+    <!--(serverCreated)="onServerAdded($event)"-->
+    <!--(bpCreated)="onBlueprintAdded($event)"-->
+  <!--&gt;</app-cokpit>-->
+  <!--<hr>-->
+  <!--<div class="row">-->
+    <!--<div class="col-xs-12">-->
+      <!--<app-serve-element-->
+        <!--*ngFor="let serverElement of serverElements"-->
+        <!--[srvElement]="serverElement"></app-serve-element>-->
+    <!--</div>-->
+  <!--</div>-->
+
   <div class="row">
-    <div class="col-xs-12">
-      <app-serve-element
-        *ngFor="let serverElement of serverElements"
-        [srvElement]="serverElement"></app-serve-element>
+    <div class="col-xs-offset-3 col-xs-6">
+      <input type="text" class="form-control" [(ngModel)]="testvar">
+      <!--<input type="text" class="form-control" [(ngModel)]="testvar">-->
     </div>
+
   </div>
-</div>
+  <div>
+    <p (click)="clickEvent()">this a ngModel binding {{testvar}}</p>
+  </div>
+<!--</div>-->
