add http client search

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,17 @@
-<p>
-  home works!
-</p>
+<div class="jumbotron">
+  <h2>Music Search Engine</h2>
+  <p>Angular Learning Practice</p>
+  <p>
+    <a href="https://angular.io/docs">Angular 5</a> & <a href="https://getbootstrap.com/docs/3.3/">Bootstrap 3.3</a> <br>
+    <a href="https://firebase.google.com/docs/">Firebase</a> Database/Authentication <br>
+    <a href="https://affiliate.itunes.apple.com/resources/documentation/itunes-store-web-service-search-api/">iTunes Search API</a>
+  </p>
+  <hr>
+  <p>
+    The MIT License (MIT) <br>
+    Copyright (c) 2018 Wenbin
+  </p>
+  <p>
+    <a class="btn btn-lg btn-primary" href="https://github.com/sc-aug/angular-mse" role="button">View Github Code &raquo;</a>
+  </p>
+</div>
