--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,21 +1,32 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a [routerLink]="['/home']" class="navbar-brand">Home</a>
+      <a routerLink="" class="navbar-brand">Home</a>
     </div>
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a [routerLink]="['/search']">Music List</a></li>
-        <li><a [routerLink]="['/favorite']">Favorite</a></li>
+        <li routerLinkActive="active"><a routerLink="/us-pop">US POP</a></li>
+        <li routerLinkActive="active"><a routerLink="/zh-pop">CH POP</a></li>
+        <li routerLinkActive="active"><a routerLink="/search">Search</a></li>
+        <li routerLinkActive="active"><a routerLink="/favorite">Favorite</a></li>
       </ul>
-
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
+        <ng-template [ngIf]="!authService.isAuthenticated()">
+          <li><a routerLink="/sigup">Register</a></li>
+          <li><a routerLink="/sigin">Login</a></li>
+        </ng-template>
+
+        <li><a
+          style="cursor: pointer;"
+          (click)="onLogout()"
+          *ngIf="authService.isAuthenticated()">Logout</a></li>
+
+        <li class="dropdown" appDropdown *ngIf="authService.isAuthenticated()">
+          <a style="cursor: pointer;" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Save Data</a></li>
-            <li><a href="#">Fetch Data</a></li>
+            <li><a style="cursor: pointer;" (click)="onSaveFavorite()">Save Favorite</a></li>
+            <li><a style="cursor: pointer;" (click)="onFetchFavorite()">Fetch Favorite</a></li>
           </ul>
         </li>
       </ul>
@@ -23,4 +34,5 @@
   </div>
 </nav>
 
-<router-outlet></router-outlet>
+
+<!--<router-outlet></router-outlet>-->
