--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,17 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <a routerLink="/">Home</a>
-      <a [routerLink]="['user', 1]">User 1 {{ user1Activated ? '(activated)' : '' }}</a>
-      <a [routerLink]="['user', 2]">User 2 {{ user2Activated ? '(activated)' : '' }}</a>
-    </div>
-  </div>
-  <hr>
-  <div class="row">
-    <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <router-outlet></router-outlet>
+      <input type="text" #serverName>
+      <button class="btn btn-primary" (click)="onAddServer(serverName.value)">Add Server</button>
+      <br><br>
+      <button class="btn btn-primary" (click)="onPutServer()">Put Server</button>
+      <button class="btn btn-primary" (click)="onSaveServer()">Save Server</button>
+      <button class="btn btn-primary" (click)="onGetServer()">Fetch Server</button>
+
+      <hr>
+      <ul class="list-group" *ngFor="let server of servers">
+        <li class="list-group-item">{{ server.name }} (ID: {{ server.id }})</li>
+      </ul>
     </div>
   </div>
 </div>
-
-<div class="container">
-  <div class="row">
-    <button class="btn btn-primary" (click)="GETTest()">Get</button>
-  </div>
-</div>
-
-
