--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,6 +12,6 @@
     Copyright (c) 2018 Wenbin
   </p>
   <p>
-    <a class="btn btn-lg btn-primary" href="https://github.com/sc-aug/angular-mse" role="button">View Github Code &raquo;</a>
+    <a class="btn btn-lg btn-primary" href="https://github.com/gethub102/MusicWeb" role="button">View Github Code &raquo;</a>
   </p>
 </div>
