--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,73 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <input type="text" [(ngModel)]="filteredStatus">
-      <hr>
-
-      <br><br>
-      <h2>App status: {{ appStatus | async }}</h2>
-      <ul class="list-group">
-        <li
-          class="list-group-item"
-          *ngFor="let server of servers | filter: filteredStatus: 'status'"
-          [ngClass]="getStatusClasses(server)">
-          <span
-            class="badge">
-            {{ server.status }}
-          </span>
-          <strong>{{ server.name | shorten: 5 }}</strong> |
-          {{ server.instanceType | lowercase }} |
-          {{ server.started | date:'fullDate' | uppercase }}
-        </li>
-      </ul>
+      <!--<form (ngSubmit)="onSubmit(f)" #f="ngForm">-->
+      <form (ngSubmit)="onSubmit()" #f="ngForm">
+        <div
+          id="user-data"
+          ngModelGroup="userData"
+          #userData="ngModelGroup">
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input
+              type="text"
+              id="username"
+              class="form-control"
+              ngModel
+              name="username"
+              required>
+          </div>
+          <button class="btn btn-default" type="button">Suggest an Username</button>
+          <div class="form-group">
+            <label for="email">Mail</label>
+            <input
+              type="email"
+              id="email"
+              class="form-control"
+              ngModel
+              name="email"
+              required
+              email>
+            <span class="help-block">please enter a proper email</span>
+          </div>
+        </div>
+        <p *ngIf="!userData.valid && userData.touched">user data is not valid</p>
+        <div class="form-group">
+          <label for="secret">Secret Questions</label>
+          <select
+            id="secret"
+            class="form-control"
+            [ngModel]="defaultQuestion"
+            name="secret">
+            <option value="pet">Your first Pet?</option>
+            <option value="teacher">Your first teacher?</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <textarea
+            name="questionAnswer"
+            rows="3"
+            class="form-control"
+            [(ngModel)]="answer"></textarea>
+        </div>
+        <p>you reply: {{answer}}</p>
+        <div class="radio" *ngFor="let gender of genders">
+          <label>
+            <input
+              type="radio"
+              name="gender"
+              ngModel
+              [value]="gender"
+              required>
+            {{gender}}
+          </label>
+        </div>
+        <button
+          class="btn btn-primary"
+          type="submit"
+          [disabled]="!f.valid">Submit
+        </button>
+      </form>
     </div>
   </div>
 </div>
