--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,7 +10,8 @@
         <li routerLinkActive="active"><a routerLink="/zh-pop">CH POP</a></li>
         <li routerLinkActive="active"><a routerLink="/search">Search</a></li>
         <li routerLinkActive="active"><a routerLink="/favorite">Favorite</a></li>
-        <li routerLinkActive="active"><a routerLink="/profile">Profile</a></li>
+        <li routerLinkActive="active"><a routerLink="/create-profile">Create Profile</a></li>
+        <li routerLinkActive="active"><a routerLink="/show-profile">My Profile</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <ng-template [ngIf]="!authService.isAuthenticated()">
