--- a/src/app/favorite/favorite.component.html
+++ b/src/app/favorite/favorite.component.html
@@ -16,7 +16,7 @@
     <th scope="col">Add Favorite</th>
   </tr>
   </thead>
-  <tbody *ngFor="let music of favMusicList; let i = index">
+  <tbody appMouseAction appMouseActionColor="lightgrey" *ngFor="let music of favMusicList; let i = index" >
   <tr>
     <td>{{ i+1 }}</td>
     <td><a
