--- a/src/app/search/music-list/music-list.component.html
+++ b/src/app/search/music-list/music-list.component.html
@@ -11,7 +11,7 @@
     <th scope="col">Add Favorite</th>
   </tr>
   </thead>
-  <tbody *ngFor="let music of musicList; let i = index">
+  <tbody appMouseAction appMouseActionColor="lightgrey" *ngFor="let music of musicList; let i = index">
   <tr>
     <td>{{ i+1 }}</td>
     <td><a
