--- a/src/app/profile/profile/profile.component.html
+++ b/src/app/profile/profile/profile.component.html
@@ -287,9 +287,9 @@
     </form>
   </div>
 </div>
-<br>Dirty: {{ profileForm.dirty }}
-<br>Touched: {{ profileForm.touched }}
-<br>Valid: {{ profileForm.valid }}
-<br>Value: {{ profileForm.value | json }}
-<br>Street: {{ addresses.get('0.street1')?.value }}
+<!--<br>Dirty: {{ profileForm.dirty }}-->
+<!--<br>Touched: {{ profileForm.touched }}-->
+<!--<br>Valid: {{ profileForm.valid }}-->
+<!--<br>Value: {{ profileForm.value | json }}-->
+<!--<br>Street: {{ addresses.get('0.street1')?.value }}-->
 <br>&nbsp;
